Fix a couple of issues related to dark mode icons (#4655)
- Fixed missing dark mode icons in the advanced search dialog.
- Corrected inconsistent icon shading in some menus.

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -81,9 +81,11 @@ $menu-icons: (
 	@include macOS-hide-menu-icons;
 }
 
-#zotero-new-collection-menu {
-	image {
-		-moz-context-properties: fill, fill-opacity;
+menupopup image {
+	-moz-context-properties: fill, fill-opacity;
+	fill: var(--fill-secondary);
+	
+	@media (-moz-platform: macos) {
 		fill: currentColor;
 	}
 }
